--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
         </div>
       <div class="footer__bottom">
         <div class="footer__copyright">
-            <p>Copyright &#169 2023</p>
+            <p><a href="#">Copyright &#169 2023</a></p>
         </div>
         <div class="footer__policy">
-            <p>Policy United States | Change Location ></p>
+            <p><a href="#">Policy United States | Change Location ></a></p>
         </div>
       </div>
       </footer>
