--- a/index3.html
+++ b/index3.html
@@ -218,10 +218,10 @@
         </div>
       <div class="HU-3-5__bottom">
         <div class="HU-3-5__copyright">
-            <p>Copyright &#169 2023</p>
+            <p><a href="#">Copyright &#169 2023</a></p>
         </div>
         <div class="HU-3-5__policy">
-            <p>Policy United States | Change Location ></p>
+            <p><a href="#">Policy United States | Change Location ></a></p>
         </div>
       </div>
       </footer>
